[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "checkov"
version = "2.3.347"
description = "Infrastructure as code static analysis"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [
    { name = "bridgecrew", email = "meet@bridgecrew.io" }
]
urls = { Homepage = "https://github.com/bridgecrewio/checkov" }
dependencies = [
    "bc-python-hcl2==0.3.51",
    "bc-detect-secrets==1.4.29",
    "bc-jsonpath-ng==1.5.9",
    "deep-merge",
    "tabulate",
    "colorama",
    "termcolor",
    "junit-xml>=1.9",
    "dpath==2.1.3",
    "pyyaml>=5.4.1",
    "boto3>=1.17",
    "gitpython==3.1.41",
    "jmespath",
    "tqdm",
    "update-checker",
    "semantic-version",
    "packaging",
    "cloudsplaining>=0.4.3",
    "networkx<2.7",
    "igraph<0.11.0",
    "dockerfile-parse",
    "docker",
    "configargparse",
    "argcomplete",
    "policyuniverse",
    "typing-extensions>=4.1.0",
    "importlib-metadata>=0.12",
    "cachetools",
    "cyclonedx-python-lib>=2.4.0,<4.0.0",
    "packageurl-python",
    "click>=8.0.0",
    "aiohttp==3.13.3",
    "aiodns",
    "aiomultiprocess",
    "jsonschema>=4.6.0,<5.0.0",
    "prettytable==3.13.0",
    "pycep-parser==0.6.1",
    "charset-normalizer",
    "schema",
    "requests>=2.27.0",
    "yarl",
    "openai",
    "spdx-tools<0.8.0",
    "license-expression==30.1.0",
    "asteval==1.0.6",
    "setuptools",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-xdist==3.8.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "mock",
    "coverage==5.5",
    "coverage-badge",
    "bandit",
    "urllib3-mock",
    "jsonschema",
    "importlib-resources>=1.3",
    "responses",
    "aioresponses",
    "types-cachetools",
    "types-colorama",
    "types-jmespath",
    "types-jsonschema~=3.0",
    "types-pyyaml>=5.4.1",
    "types-requests",
    "types-tabulate",
    "types-tqdm",
    "types-urllib3",
    "pre-commit",
    "flake8",
    "dlint",
    "mypy",
    "flake8-bugbear",
    "parameterized",
    "freezegun",
    "boto3-stubs-lite[s3]",
]

[tool.setuptools.packages.find]
exclude = ["dogfood_tests*", "flake8_plugins*", "integration_tests*", "performance_tests*", "tests*"]
